force-app/main/default/objects/Exception_Log__c/fields/Completed_VIN__c.field-meta.xml
<CustomField>
    <fullName>Completed_VIN__c</fullName>
    <label>Completed VIN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>