force-app/main/default/objects/Exception_Log__c/fields/End_Date_And_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_And_Time__c</fullName>
    <label>End Date And Time</label>
    <type>DateTime</type>
</CustomField>