force-app/main/default/objects/Exception_Log__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>