force-app/main/default/objects/Exception_Log__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>