force-app/main/default/objects/Exception_Log__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>PostalCode</label>
    <length>18</length>
    <type>Text</type>
</CustomField>