force-app/main/default/objects/Exception_Log__c/fields/Rec_Name__c.field-meta.xml
<CustomField>
    <fullName>Rec_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>