force-app/main/default/objects/Exception_Log__c/fields/Secondary_Sources__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sources__c</fullName>
    <label>Secondary Sources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>