force-app/main/default/objects/Exception_Log__c/fields/Skipped_VIN__c.field-meta.xml
<CustomField>
    <fullName>Skipped_VIN__c</fullName>
    <label>Skipped VIN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>