force-app/main/default/objects/Exception_Log__c/fields/Total_VIN_Failed__c.field-meta.xml
<CustomField>
    <fullName>Total_VIN_Failed__c</fullName>
    <label>Total VIN Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>