force-app/main/default/objects/Exception_Log__c/fields/Total_VIN_Inserted__c.field-meta.xml
<CustomField>
    <fullName>Total_VIN_Inserted__c</fullName>
    <label>Total VIN Inserted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>