force-app/main/default/objects/Exception_Log__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIN</label>
    <type>Checkbox</type>
</CustomField>