force-app/main/default/objects/Exception_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Integration_Type__c</columns>
    <columns>HTTP_Method__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>Reference_Id__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All  Exception Logs</label>
</ListView>