force-app/main/default/objects/Exception_Log__c/listViews/Apex_Exception_Logs.listView-meta.xml
<ListView>
    <fullName>Apex_Exception_Logs</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Developer_Name__c</columns>
    <columns>Error_Line_No__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Stack_Trace__c</columns>
    <columns>Error_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Type__c</field>
        <operation>equals</operation>
        <value>Apex Type</value>
    </filters>
    <label>Apex Exception Logs</label>
</ListView>