force-app/main/default/objects/Exception_Log__c/listViews/Callout_Exception_Logs.listView-meta.xml
<ListView>
    <fullName>Callout_Exception_Logs</fullName>
    <columns>NAME</columns>
    <columns>Integration_Type__c</columns>
    <columns>HTTP_Method__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Type__c</field>
        <operation>equals</operation>
        <value>CALLOUT</value>
    </filters>
    <label>Callout Exception Logs</label>
</ListView>