force-app/main/default/objects/Exception_Log__c/listViews/Today_s_API_Logs.listView-meta.xml
<ListView>
    <fullName>Today_s_API_Logs</fullName>
    <columns>NAME</columns>
    <columns>Reference_Id__c</columns>
    <columns>HTTP_Method__c</columns>
    <columns>Request_Body__c</columns>
    <columns>Response_Body__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>EndPoint__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Type__c</field>
        <operation>equals</operation>
        <value>CALLOUT</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s API Logs</label>
</ListView>