force-app/main/default/objects/Exception_Log__c/listViews/Today_s_Exception_Logs.listView-meta.xml
<ListView>
    <fullName>Today_s_Exception_Logs</fullName>
    <columns>NAME</columns>
    <columns>Integration_Type__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Line_No__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Integration_Type__c</field>
        <operation>equals</operation>
        <value>Apex Type</value>
    </filters>
    <label>Today&apos;s Apex Logs</label>
</ListView>