force-app/main/default/objects/Exception_Log__c/listViews/VIN_Logs.listView-meta.xml
<ListView>
    <fullName>VIN_Logs</fullName>
    <columns>NAME</columns>
    <columns>Skipped_VIN__c</columns>
    <columns>Completed_VIN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VIN__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>VIN Logs</label>
</ListView>